new file:   .coverage modified:   .github/workflows/ci.yml new file:   app/__pycache__/__init__.cpython-311.pyc new file:   app/__pycache__/main.cpython-311.pyc new file:   coverage.xml new file:   tests/__pycache__/test_main.cpython-311-pytest-7.4.0.pyc

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
 
     - name: Build and test
       run: |
-        docker build -t todo-ci .
-        docker run -v ${{ github.workspace }}:/app todo-ci
+        docker build -t todo-ci4 .
+        docker run -v ${{ github.workspace }}:/app todo-ci4
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
